--- a/src/hal/CMakeLists.txt
+++ b/src/hal/CMakeLists.txt
@@ -2,8 +2,12 @@ set(CMAKE_AUTOMOC ON)
 
 add_subdirectory(camera)
 add_subdirectory(communication)
-add_library(halLib )
+add_subdirectory(action)
+aux_source_directory(. DIR_SYSTEM_SRCS)
+
+add_library(halLib ${DIR_SYSTEM_SRCS})
 
 target_link_libraries(halLib
     baslerCameraLib
+    actionLib
     communicationLib)
