--- a/src/ui/CMakeLists.txt
+++ b/src/ui/CMakeLists.txt
@@ -1,7 +1,8 @@
 aux_source_directory(. DIR_SYSTEM_SRCS)
 set(cppFile
     inputDialog/inputDialog.cpp
-    controlWidget/controlWidget.cpp)
+    controlWidget/controlWidget.cpp
+    stateLedWidget/plcStateLed.cpp)
 add_library(uiLib
     ${DIR_SYSTEM_SRCS}
     ${cppFile})
