--- a/src/hal/CMakeLists.txt
+++ b/src/hal/CMakeLists.txt
@@ -2,6 +2,7 @@ set(CMAKE_AUTOMOC ON)
 
 add_subdirectory(camera)
 add_subdirectory(communication)
+add_subdirectory(communication/serialPort)
 add_subdirectory(action)
 aux_source_directory(. DIR_SYSTEM_SRCS)
 
@@ -10,4 +11,5 @@ add_library(halLib ${DIR_SYSTEM_SRCS})
 target_link_libraries(halLib
     baslerCameraLib
     actionLib
-    communicationLib)
+    communicationLib
+    serialPortLib)
