添加手动选择类型及装配计数

--- a/src/ui/CMakeLists.txt
+++ b/src/ui/CMakeLists.txt
@@ -2,6 +2,7 @@ add_subdirectory(inputDialog)
 add_subdirectory(controlWidget)
 add_subdirectory(stateLedWidget)
 add_subdirectory(setParaWindow)
+add_subdirectory(assemblyTypeWindow)
 
 aux_source_directory(. DIR_SYSTEM_SRCS)
 add_library(uiLib ${DIR_SYSTEM_SRCS})
@@ -10,4 +11,5 @@ target_link_libraries(uiLib
     inputDialogLib
     controlWidgetLib
     stateLedWidgetLib
-    setParaWindowLib)
+    setParaWindowLib
+    assemblyTypeWindowLib)
