--- a/src/ui/CMakeLists.txt
+++ b/src/ui/CMakeLists.txt
@@ -1,15 +1,11 @@
-add_subdirectory(inputDialog)
 add_subdirectory(controlWidget)
 add_subdirectory(stateLedWidget)
 add_subdirectory(setParaWindow)
-add_subdirectory(assemblyTypeWindow)
 
 aux_source_directory(. DIR_SYSTEM_SRCS)
 add_library(uiLib ${DIR_SYSTEM_SRCS})
 
 target_link_libraries(uiLib
-    inputDialogLib
     controlWidgetLib
     stateLedWidgetLib
-    setParaWindowLib
-    assemblyTypeWindowLib)
+    setParaWindowLib)
