--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,8 +53,10 @@ if("${CMAKE_BUILD_TYPE}" STREQUAL "Debug")
 endif()
 
 include_directories(include/halcon12x64 include/halcon12x64/halconcpp)
+include_directories(${PROJECT_SOURCE_DIR}/src/qtSingleApplication)
 include_directories(${PROJECT_SOURCE_DIR}/src)
 
+add_subdirectory(${PROJECT_SOURCE_DIR}/src/qtSingleApplication)
 add_subdirectory(${PROJECT_SOURCE_DIR}/src/system)
 add_subdirectory(${PROJECT_SOURCE_DIR}/src/para)
 set(paraServerCpp
@@ -103,7 +105,7 @@ add_executable(${PROJECT_NAME}
     main.cpp
     ico.rc)
 
-target_link_libraries(${PROJECT_NAME} PRIVATE ${libs} Qt5::Widgets Qt5::Core Qt5::Gui Qt5::SerialPort halLib sysLib halconProcessLib paraLib uiLib) # Qt5 Shared Library
+target_link_libraries(${PROJECT_NAME} PRIVATE ${libs} ${Qt5model} qtSingleApplicationLib halLib sysLib halconProcessLib paraLib uiLib) # Qt5 Shared Library
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
